--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
 }
 #root {
-  background-image: url("spacebg2.jpg");
+  background-image: url("spacebg2.png");
   /* background-color: grey; */
 }
 .contain {
